--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ button {
   font-weight: 500;
   border: 2px solid #fff;
   padding: 0.5rem 2rem;
+  border-radius: 0.4rem;
 }
 
 #play:hover {
@@ -51,4 +52,11 @@ button {
 .push {
   transition: transform 0.05s ease-out;
   transform: translate(2px, 2px);
+  background-color: #fff;
+  color: #051329;
+}
+
+.disappear {
+  transition: opacity 0.7s ease;
+  opacity: 0;
 }
