--- a/style.css
+++ b/style.css
@@ -17,10 +17,18 @@ html {
   background-color: #081933;
   border: 1px solid white;
   border-radius: 1rem;
-  box-shadow: 0 0 1rem #ffffff75;
+  /* box-shadow: 0 0 1rem #ffffff75; */
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.container-ui {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
 }
 
 button {
@@ -34,19 +42,23 @@ button {
   text-align: center;
   text-decoration: none;
   text-transform: none;
+  font-size: 1rem;
+}
+
+.btn {
+  border: 2px solid #fff;
+  border-radius: 0.4rem;
+}
+
+.btn:hover {
+  box-shadow: 0 0 0.7rem #fff;
 }
 
 #play {
   font-size: 2rem;
   font-family: inherit;
   font-weight: 500;
-  border: 2px solid #fff;
   padding: 0.5rem 2rem;
-  border-radius: 0.4rem;
-}
-
-#play:hover {
-  box-shadow: 0 0 0.7rem #fff;
 }
 
 .push {
@@ -59,4 +71,21 @@ button {
 .disappear {
   transition: opacity 0.7s ease;
   opacity: 0;
+}
+
+.hidden {
+  display: none;
+  opacity: 0;
+}
+
+.appear {
+  transition: opacity 0.7s ease;
+  opacity: 1;
+}
+
+.game-btn {
+  height: 6rem;
+  width: 6rem;
+  font-weight: 700;
+  letter-spacing: -1px;
 }
