Style score and game containers

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 body,
 html {
   background-color: #051329;
+  color: #fff;
   font-family: "IBM Plex Sans", sans-serif;
 }
 
@@ -26,15 +27,16 @@ html {
   align-items: center;
   justify-content: center;
   padding: 6rem 3rem;
+  flex-direction: column;
 }
 
 .container-ui {
   display: flex;
   flex: 1;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 2rem;
-  align-self: flex-end;
 }
 
 button {
@@ -94,4 +96,27 @@ button {
   width: 6rem;
   font-weight: 700;
   letter-spacing: -1px;
+}
+
+.score {
+  display: flex;
+  flex: 1;
+  font-size: 8rem;
+  font-weight: 700;
+}
+
+.buttons-ui {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.game-containers {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  gap: 6rem;
 }
