--- a/style.css
+++ b/style.css
@@ -120,3 +120,14 @@ button {
   justify-content: center;
   gap: 6rem;
 }
+
+.log {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  font-size: 2rem;
+  font-weight: 500;
+  /* border: 1px solid #fff; */
+}
