--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ html {
 }
 
 .container {
+  position: relative;
   width: 1140px;
   height: 600px;
   background-color: #081933;
@@ -87,6 +88,11 @@ button {
   opacity: 0;
 }
 
+.hidden-a {
+  display: none;
+  opacity: 0;
+}
+
 .appear {
   transition: opacity 0.7s ease;
   opacity: 1;
@@ -131,4 +137,14 @@ button {
   font-size: 2rem;
   font-weight: 500;
   /* border: 1px solid #fff; */
+}
+
+.announce {
+  font-size: 6rem;
+  font-weight: 700;
+  position: absolute;
+}
+
+.fade {
+  opacity: 0.6;
 }
